--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.7",
+    "recharts": "^2.1.13",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
