--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ FROM_MAIL=kain.199x@gmail.com
 FROM_PWD=ppcyxvimkhwklcfj
 DB_SQL=ecommerce
 USERNAME_SQL=root
-PASSWORD_SQL=Leokhai1@
+PASSWORD_SQL=admin
 HOST_SQL=localhost
 DIALECT_SQL=mysql
 
